Bug 1625600 - remove superfluous overflow:hidden for extension panelviews to resolve issues with long pane titles, r=kmag
From some testing on Windows, I can't figure out why we need this styling,
and re-reading what's left of the reviews after mozreview's demise has not
helped. So perhaps we can just remove it?

Differential Revision: https://phabricator.services.mozilla.com/D69630

UltraBlame original commit: 96614a3debc33b4223d881457e5a0d21e1439668

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -2906,22 +2906,6 @@ opacity
 ;
 }
 panelview
-[
-id
-^
-=
-PanelUI
--
-webext
--
-]
-{
-overflow
-:
-hidden
-;
-}
-panelview
 :
 not
 (
